--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,56 @@
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Next.js
+.next/
+out/
+
+# Production
+build
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env*.local
+
+# IDE
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Testing
+coverage
+.nyc_output
+
+# Misc
+.cache
+dist
+.temp
+.vercel
+.netlify
+*.pem
+*.p8
+*.key
+*.crt
+*.cer
+
+# Local Netlify folder if it exists
+.netlify
