--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@bbob/core": "^4.2.0",
+    "@bbob/html": "^4.2.0",
+    "@bbob/preset-html5": "^4.2.0",
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/postcss": "4.0.0-alpha.13",
+    "@types/date-fns": "^2.6.3",
     "@types/node": "20.11.17",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
+    "date-fns": "^4.1.0",
     "geist": "1.2.2",
     "next": "canary",
     "next-mdx-remote": "^4.4.1",
