--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --no-cache",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
