--- a/package.json
+++ b/package.json
@@ -6,19 +6,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@21st-dev/magic": "^0.1.0",
     "@bbob/core": "^4.2.0",
     "@bbob/html": "^4.2.0",
     "@bbob/preset-html5": "^4.2.0",
+    "@executeautomation/playwright-mcp-server": "^1.0.6",
+    "@modelcontextprotocol/server-sequential-thinking": "^2025.7.1",
+    "@supabase/mcp-server-supabase": "^0.4.5",
+    "@supabase/mcp-utils": "^0.2.1",
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/postcss": "4.0.0-alpha.13",
     "@types/date-fns": "^2.6.3",
     "@types/node": "20.11.17",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
+    "@upstash/context7-mcp": "^1.0.14",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
     "date-fns": "^4.1.0",
     "geist": "1.2.2",
+    "mcp-framework": "^0.2.15",
     "next": "canary",
     "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.35",
