--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@bbob/core": "^4.2.0",
     "@bbob/html": "^4.2.0",
     "@bbob/preset-html5": "^4.2.0",
+    "@clerk/nextjs": "^6.27.1",
     "@executeautomation/playwright-mcp-server": "^1.0.6",
     "@modelcontextprotocol/server-sequential-thinking": "^2025.7.1",
     "@supabase/mcp-server-supabase": "^0.4.5",
