--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@upstash/context7-mcp": "^1.0.14",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
+    "ai": "^5.0.10",
     "date-fns": "^4.1.0",
     "geist": "1.2.2",
     "mcp-framework": "^0.2.15",
@@ -34,6 +35,7 @@
     "react-dom": "18.2.0",
     "sugar-high": "^0.6.0",
     "tailwindcss": "4.0.0-alpha.13",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vercel-mcp": "^0.0.7"
   }
 }
