--- a/.github/workflows/backup-cron.yml
+++ b/.github/workflows/backup-cron.yml
@@ -17,11 +17,10 @@ jobs:
         run: |
           echo "🚀 Starting backup batch execution..."
           
-          # Vercel 크론과 동일한 헤더로 요청
+          # Vercel 크론과 동일한 Authorization 헤더로 요청
           response=$(curl -s -w "%{http_code}" -o /tmp/response.json \
             -X POST https://patchlog.vercel.app/api/marvel-batch \
-            -H "x-vercel-cron: 1" \
-            -H "user-agent: vercel-cron/1.0")
+            -H "Authorization: Bearer ${{ secrets.CRON_SECRET }}")
           
           http_code="${response: -3}"
           
