--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@supabase/mcp-server-supabase": "^0.4.5",
     "@supabase/mcp-utils": "^0.2.1",
     "@supabase/supabase-js": "^2.50.0",
-    "@tailwindcss/postcss": "4.0.0-alpha.13",
     "@types/date-fns": "^2.6.3",
     "@types/node": "20.11.17",
     "@types/react": "18.2.55",
@@ -35,11 +34,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sugar-high": "^0.6.0",
-    "tailwindcss": "4.0.0-alpha.13",
     "typescript": "5.3.3",
     "vercel-mcp": "^0.0.7"
   },
   "devDependencies": {
-    "@playwright/test": "^1.55.0"
+    "@playwright/test": "^1.55.0",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "3.4.14"
   }
 }
